<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/rounded_commit_item_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/authorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/commitAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/layout_commit_author"/>

            <TextView
                android:id="@+id/commitDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/layout_commit_date"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/commitShortMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorContainer"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/layout_commit_short_message"/>

        <TextView
            android:id="@+id/commitHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commitShortMessage"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/layout_commit_hash"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>