<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_repository_item_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp" >

        <TextView
            android:id="@+id/repositoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:text="@string/layout_repository_name"/>

        <TextView
            android:id="@+id/repositoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repositoryName"
            android:visibility="gone"
            android:text="@string/layout_repository_description"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/countContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repositoryDescription"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/repositoryForksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_repository_forks"/>

            <TextView
                android:id="@+id/repositoryWatchesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_repository_watches"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/authorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countContainer"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/repositoryAuthorAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:visibility="visible"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/repositoryAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/layout_repository_author"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_commits_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="1"
            tools:itemCount="5"
            tools:listitem="@layout/item_commit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorContainer"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>